# oomalloc

./: CMakeLists.txt  LICENSE  README.md  func_versions.sh
include/: oomalloc.h
src/: oomalloc.c  oomalloc_test.h  utils.h
test/: oomalloc.cpp
